Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-3337

Unexpected cancelled warning

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.6.0
    • Impala 2.6.0
    • Backend
    • None

    Description

      The following query causes an unexpected warning:

      USE tpch_nested_parquet;
      CREATE TABLE tpchcustomer_tmp STORED AS parquet AS SELECT * FROM customer LIMIT 10;
      

      Warning:

      Query: create TABLE customer_tmp STORED AS parquet AS SELECT * FROM customer LIMIT 10
      +--------------------+
      | summary            |
      +--------------------+
      | Inserted 10 row(s) |
      +--------------------+
      WARNINGS: Cancelled
      

      Attachments

        Activity

          People

            dhecht Daniel Hecht
            tarasbob Taras Bobrovytsky
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: