be/src/exec/base-sequence-scanner.cc
@@ -114,8 +114,7 @@ Status BaseSequenceScanner::ProcessSplit() {
     header_ = state_->obj_pool()->Add(AllocateFileHeader());
     Status status = ReadFileHeader();
     if (!status.ok()) {
-      if (state_->abort_on_error()) return status;
-      state_->LogError(status.msg());
+      RETURN_IF_ERROR(LogOrReturnError(status.msg()));
       // We need to complete the ranges for this file.
       CloseFileRanges(stream_->filename());
       return Status::OK();
